--- a/handles/identify_secondary_objects_iw.handles.yaml
+++ b/handles/identify_secondary_objects_iw.handles.yaml
@@ -20,8 +20,8 @@ input:
       threshold levels for manual fine-tuning.
 
   - name: min_threshold
-    type: Numeric
-    value: 120
+    type: Sequence
+    value: [2,1.5]
     help: >
       Minimal threshold level. Lower boundary for pixel values to still be
       considered part of objects.
