--- a/handles/identify_secondary_objects_iw.handles.yaml
+++ b/handles/identify_secondary_objects_iw.handles.yaml
@@ -28,7 +28,7 @@ input:
 
   - name: plot
     type: Plot
-    value:
+    value: false
     options: [true, false]
     help: Should a figure be created?
 
