--- a/handles/IdentifyPrimIterative_original.handles.yaml
+++ b/handles/IdentifyPrimIterative_original.handles.yaml
@@ -9,23 +9,27 @@ input:
 
   - name: CuttingPasses
     type: Numeric
+    key: 
     value: 2
     help: Number of cutting rounds that should be applied.
 
   - name: ThresholdCorrection
     type: Numeric
+    key: 
     value: 2
-    help: Intensity thresholding: Threshold correction factor
+    help: Intensity thresholding. Threshold correction factor.
 
   - name: ThresholdRange
     type: Sequence
+    key: 
     value: [20.0019,0.02]
     help: >
-      Intensity thresholding: Lower and upper bounds on threshold, 
+      Intensity thresholding. Lower and upper bounds on threshold, 
       in the range [0,1].
 
   - name: SolidityThres
     type: Numeric
+    key: 
     value: 0.92
     help: >
       Maximal solidity value for a continuous pixel region
@@ -33,6 +37,7 @@ input:
 
   - name: FormFactorThres
     type: Numeric
+    key: 
     value: 0.40
     help: >
       Minimal (negative) form factor value for a continuous pixel region
@@ -40,6 +45,7 @@ input:
 
   - name: LowerSizeThres
     type: Numeric
+    key: 
     value: 5000
     help: >
       Minimal area value for a continuous pixel region
@@ -47,6 +53,7 @@ input:
 
   - name: UpperSizeThres
     type: Numeric
+    key: 
     value: 50000
     help: >
       Maximal area value for a continuous pixel region
@@ -54,17 +61,19 @@ input:
 
   - name: TestMode2
     type: Boolean
+    key: 
     value: false
     options:
       - false
       - true
     help: >
       Whether selected clumps should be plotted in order to empirically determine 
-      optimal values for `max_solidity`, `min_formfactor`, `min_area` and
-      and `max_area` (results will be shown for the last cutting pass).
+      optimal values for <max_solidity>, <min_formfactor>, min_area and
+      and max_area (results will be shown for the last cutting pass).
 
   - name: smoothingDiskSize
     type: Numeric
+    key: 
     value: 2
     help: >
       Size of the smoothing filter that is applied to the mask prior to
@@ -72,38 +81,44 @@ input:
 
   - name: WindowSize
     type: Numeric
+    key: 
     value: 9
     help: Size of the sliding window used for perimeter analysis.
 
   - name: PerimSegEqSegment
     type: Numeric
+    key: 
     value: 6
     help: Minimal equivalent angle of the concave region.
 
   - name: PerimSegEqRadius
     type: Numeric
+    key: 
     value: 30
-    help: Perimeter analysis: Maximum concave region equivalent RADIUS.
+    help: Perimeter analysis. Maximum concave region equivalent RADIUS.
 
   - name: TestMode
     type: Boolean
+    key: 
     value: false
     options:
       - false
       - true
     help: >
       Whether result of the perimeter analysis should be plotted in order to
-      empirically determine optimal values for `min_angle` and `max_radius`
+      empirically determine optimal values for min_angle and max_radius
       (results will be shown for the last cutting pass).
 
   - name: LowerSizeCutThres
     type: Numeric
+    key: 
     value: 5000
     help: >
       Minimal area that cut objects should have.
 
   - name: DebugMode
     type: Boolean
+    key: 
     value: false
     options:
       - false
@@ -113,19 +128,21 @@ input:
 
   - name: plot
     type: Plot
+    key: 
     value: false
     options: [true, false]
     help: Should a figure be created?
 
 output:
 
-  - name: output_mask
+  - name: imFinalObjects
     type: BinaryImage
     key:  identify_primary_objects_original.output_label_image 
     help: label output image.
 
   - name: fig
     type: Figure
+    key: 
 
 
 
