--- a/handles/IdentifySecondaryIterative_original.handles.yaml
+++ b/handles/IdentifySecondaryIterative_original.handles.yaml
@@ -14,6 +14,7 @@ input:
 
   - name: ThresholdRange
     type: Sequence
+    key: 
     value: [20.0019,0.02]
     help: >
       Intensity thresholding: Lower and upper bounds on threshold, 
@@ -21,6 +22,7 @@ input:
 
   - name: iThresholdCorrection
     type: Sequence
+    key: 
     value: [2, 1.5, 1.3, 0.9, 0.7, 0.6, 0.58, 0.55, 0.50, 0.45, 0.4, 0.35, 0.3, 0.25]
     help: >
       Threshold correction factors that are multiplied with calculated
@@ -28,19 +30,21 @@ input:
 
   - name: plot
     type: Plot
+    key: 
     value: false
     options: [true, false]
     help: Should a figure be created?
 
 output:
 
-  - name: output_label_image
+  - name: FinalLabelMatrixImage
     type: LabelImage
     key:  identify_secondary_objects_original.output_label_image
     help: Binary output image.
 
   - name: fig
     type: Figure
+    key: 
     help: >
       Identified objects in <i>output_label_image</i> and overlay of object
       outlines on <i>intensity_image</i>.
