--- a/handles/IdentifySecondaryIterative_original.handles.yaml
+++ b/handles/IdentifySecondaryIterative_original.handles.yaml
@@ -14,14 +14,14 @@ input:
 
   - name: ThresholdRange
     type: Sequence
-    value: [20.0019,0.02]
+    value: [0.0025,1]
     help: >
       Intensity thresholding: Lower and upper bounds on threshold, 
       in the range [0,1].
 
   - name: iThresholdCorrection
     type: Sequence
-    value: [2, 1.5, 1.3, 0.9, 0.7, 0.6, 0.58, 0.55, 0.50, 0.45, 0.4, 0.35, 0.3, 0.25]
+    value: [5, 3, 2, 1.75, 1.5, 1.25, 1.1, 1.05, 1, 0.95, 0.9, 0.85, 0.8, 0.75, 0.7, 0.6, 0.58, 0.55, 0.50]
     help: >
       Threshold correction factors that are multiplied with calculated
       threshold levels for manual fine-tuning.
@@ -41,8 +41,8 @@ output:
 
   - name: fig
     type: Figure
-    key: 
     value: false
+    options: [true, false]
     help: >
       Identified objects in <i>output_label_image</i> and overlay of object
       outlines on <i>intensity_image</i>.
