--- a/handles/IdentifySecondaryIterative_original.handles.yaml
+++ b/handles/IdentifySecondaryIterative_original.handles.yaml
@@ -18,14 +18,14 @@ input:
     value: [0.0025, 1]
     help: >
       Intensity thresholding: Lower and upper bounds on threshold, 
-      in the range [0,1].
+      in the range 0 and 1.
 
   - name: iThresholdCorrection
     type: Sequence
     value: [5, 3, 2, 1.75, 1.5, 1.25, 1.1, 1.05, 1, 0.95, 0.9, 0.85, 0.8, 0.75, 0.7, 0.6, 0.58, 0.55, 0.50]
     help: >
       Threshold correction factors that are multiplied with calculated
-      threshold levels for manual fine-tuning.
+      threshold levels for manual fine tuning.
 
   - name: plot
     type: Plot
@@ -41,5 +41,5 @@ output:
 
   - name: figure
     type: Figure
-    help: Plot the figure.
+    help: Plot the figure. 
 
